--- a/debian/control
+++ b/debian/control
@@ -1,21 +1,20 @@
-Source: cute-updator
+Source: lingmo-updator
 Section: devel
 Priority: optional
-Maintainer: CuteOS <cuteos@foxmail.com>
+Maintainer: Lingmo OS <lingmo@lingmo.org>
 Build-Depends:  cmake,
 		libqapt-dev,
-		libkf5windowsystem-dev,
 		qtbase5-dev,
 		qtdeclarative5-dev,
 		qtquickcontrols2-5-dev,
 		qttools5-dev,
 		qttools5-dev-tools,
 		debhelper (>= 9)
-Standards-Version: 4.6.0
-Homepage: https://cuteos.com
+Standards-Version: 4.5.0
+Homepage: https://lingmo.org
 Rules-Requires-Root: no
 
-Package: cute-updator
+Package: lingmo-updator
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: CuteOS Updator.
+Description: LingmoOS Updator.
