--- a/lingmo-updator.desktop
+++ b/lingmo-updator.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=System update
 Name[zh_CN]=软件更新
-Exec=/usr/bin/cute-updator
-Icon=cute-updator
+Exec=/usr/bin/lingmo-updator
+Icon=update
 Type=Application
 NoDisplay=false
