--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,15 @@ jobs:
       run: mkdir -p /usr/include/KF5
     - name: Build Package
       run: dpkg-buildpackage -b -uc -us -j$(nproc)
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+         The release
+        draft: false
+        prerelease: false
