--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,16 @@ jobs:
     - name: Checkout Source
       uses: actions/checkout@v2
     - name: Update repository
-      run: apt-get update -y
+      run: |
+        apt-get update -y
+        mkdir build -r
+        mv ./*.{cpp,qml,txt,desktop,qrc,h} build/ && mv {debian,images,translations} build/
     - name: Install the basic dev packages
       run: apt-get install -y equivs curl git devscripts lintian build-essential automake autotools-dev cmake g++
     - name: Install build dependencies
-      run: mk-build-deps -i -t "apt-get --yes" -r
+      run: |
+        mk-build-deps -i -t "apt-get --yes" -r
+        cd build/
     - name: Fix KF5
       run: mkdir -p /usr/include/KF5
     - name: Build Package
@@ -46,7 +51,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          ../lingmo-updator_1.9.9-20_amd64.deb
-          ../lingmo-updator-dbgsym_1.9.9-20_amd64.deb
-          ../lingmo-updator_1.9.9-20_amd64.buildinfo
-          ../lingmo-updator_1.9.9-20_amd64.changes
+          lingmo-updator_1.9.9-20_amd64.deb
+          lingmo-updator-dbgsym_1.9.9-20_amd64.deb
+          lingmo-updator_1.9.9-20_amd64.buildinfo
+          lingmo-updator_1.9.9-20_amd64.changes
