--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Update repository
       run: |
         apt-get update -y
-        mkdir build -r
+        mkdir build/
         mv ./*.{cpp,qml,txt,desktop,qrc,h} build/ && mv {debian,images,translations} build/
     - name: Install the basic dev packages
       run: apt-get install -y equivs curl git devscripts lintian build-essential automake autotools-dev cmake g++
