--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Update repository
       run: |
         apt-get update -y
-        mkdir build/
-        mv ./*.{cpp,qml,txt,desktop,qrc,h} build/ && mv {debian,images,translations} build/
+        mkdir -p build/
+        mv ./*.{cpp, qml, txt, desktop, qrc, h} build/ && mv {debian, images, translations} build/
     - name: Install the basic dev packages
       run: apt-get install -y equivs curl git devscripts lintian build-essential automake autotools-dev cmake g++
     - name: Install build dependencies
