--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,18 +23,17 @@ jobs:
     - name: Update repository
       run: |
         apt-get update -y
-        mkdir -p build/
-        mv !(build) build
     - name: Install the basic dev packages
       run: apt-get install -y equivs curl git devscripts lintian build-essential automake autotools-dev cmake g++
     - name: Install build dependencies
       run: |
         mk-build-deps -i -t "apt-get --yes" -r
-        cd build/
     - name: Fix KF5
       run: mkdir -p /usr/include/KF5
     - name: Build Package
-      run: dpkg-buildpackage -b -uc -us -j$(nproc)
+      run: |
+        dpkg-buildpackage -b -uc -us -j$(nproc)
+        cd ../
       
     - name: Create Release
       id: create_release
