--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,12 +45,17 @@ jobs:
         release_name: Release 1.9.9-20
         draft: false
         prerelease: false
-    - name: Release
+    - name: Upload Release Asset
+      id: upload-release-asset
       uses: actions/upload-release-asset@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: |
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ github.workspace }}
+        asset_name: |
           lingmo-updator_1.9.9-20_amd64.deb
           lingmo-updator-dbgsym_1.9.9-20_amd64.deb
           lingmo-updator_1.9.9-20_amd64.buildinfo
           lingmo-updator_1.9.9-20_amd64.changes
+        asset_content_type: application/deb
