--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ github.workspace }}
-        asset_name: |
+        asset_name:
           lingmo-updator_1.9.9-20_amd64.deb
           lingmo-updator-dbgsym_1.9.9-20_amd64.deb
           lingmo-updator_1.9.9-20_amd64.buildinfo
