--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_name:
-          lingmo-updator_1.9.9-20_amd64.deb
-          lingmo-updator-dbgsym_1.9.9-20_amd64.deb
-          lingmo-updator_1.9.9-20_amd64.buildinfo
-          lingmo-updator_1.9.9-20_amd64.changes
+        asset_name: lingmo-updator_1.9.9-20_amd64.deb
         asset_content_type: application/deb
