--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,23 +35,9 @@ jobs:
         dpkg-buildpackage -b -uc -us -j$(nproc)
         cd ../
       
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: 1.9.9-20
-        release_name: Release 1.9.9-20
-        draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: lingmo-updator_1.9.9-20_amd64.deb
-        asset_name: lingmo-updator_1.9.9-20_amd64.deb
-        asset_content_type: application/deb
+        files: |
+          lingmo-updator_1.9.9-20_amd64.deb
