--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,10 @@ jobs:
       
     - name: Release
       uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         files: |
           lingmo-updator_1.9.9-20_amd64.deb
