--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,19 @@ jobs:
       run: |
         dpkg-buildpackage -b -uc -us -j$(nproc)
         cd ../
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: 1.9.9-20
+        release_name: Release 1.9.9-20
+        draft: false
+        prerelease: false
       
     - name: Release
-      uses: softprops/action-gh-release@v1
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: startsWith(github.ref, 'refs/tags/')
