--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,17 +44,13 @@ jobs:
         release_name: Release 1.9.9-20
         draft: false
         prerelease: false
-      
-    - name: Release
+    - name: Upload Release Asset
+      id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        tag_name: 1.9.9-20
-        release_name: Release 1.9.9-20
-        draft: false
-        prerelease: false
-        files: |
-          lingmo-updator_1.9.9-20_amd64.deb
+        asset_path: ${{ github.workspace }}/lingmo-updator_1.9.9-20_amd64.deb
+        asset_name: lingmo-updator_1.9.9-20_amd64.deb
+        asset_content_type: application/deb
