--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,15 +33,19 @@ jobs:
     - name: Build Package
       run: |
         dpkg-buildpackage -b -uc -us -j$(nproc)
+        ls
+        pwd
         cd ../
+        pwd
+        ls
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: 1.9.9-21
-        release_name: Release 1.9.9-21
+        tag_name: 1.9.9-23
+        release_name: Release 1.9.9-23
         draft: false
         prerelease: false
     - name: Upload Release Asset
