--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,6 @@ jobs:
     - name: Build Package
       run: |
         dpkg-buildpackage -b -uc -us -j$(nproc)
-        ls
-        pwd
-        cd ../
-        pwd
-        ls
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -55,6 +50,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/lingmo-updator_1.9.9-20_amd64.deb
+        asset_path: /__w/lingmo-updator/lingmo-updator_1.9.9-20_amd64.deb
         asset_name: lingmo-updator_1.9.9-20_amd64.deb
         asset_content_type: application/deb
