--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# find_package(Qt5 COMPONENTS Core Quick DBus LinguistTools WebEngine WebEngineWidgets REQUIRED)
 find_package(Qt5 COMPONENTS Core Quick DBus LinguistTools REQUIRED)
 find_package(QApt REQUIRED)
 
@@ -31,12 +32,24 @@ target_link_libraries(lingmo-updator
   Qt5::Quick
   Qt5::DBus
   QApt::Main
+  # Qt5::WebEngine
+  # Qt5::WebEngineWidgets
 )
 
 file(GLOB TS_FILES translations/*.ts)
-qt5_create_translation(QM_FILES ${TS_FILES})
-add_custom_target(translations DEPENDS ${QM_FILES} SOURCES ${TS_FILES})
-add_dependencies(lingmo-updator translations)
+foreach(filepath ${TS_FILES})
+    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" filename ${filepath})
+    list(APPEND ts_files_replaced ${filename})
+endforeach()
+qt5_create_translation(QM_FILES ${CMAKE_CURRENT_SOURCE_DIR} ${ts_files_replaced})
+
+add_custom_target(translations ALL DEPENDS ${QM_FILES} SOURCES ${TS_FILES})
+
+foreach(_ts_file ${TS_FILES})
+    execute_process(
+        COMMAND ${LUPDATE_EXECUTABLE} -recursive ${CMAKE_SOURCE_DIR} -ts ${_ts_file})
+    execute_process(COMMAND lrelease ${_ts_file})
+endforeach()
 
 install(TARGETS lingmo-updator RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES ${QM_FILES} DESTINATION /usr/share/lingmo-updator/translations)
