--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends:  cmake,
 		libqapt-dev,
 		qtbase5-dev,
 		qtdeclarative5-dev,
+		qml-module-qtwebview,
+		qtwebengine5-dev,
 		qtquickcontrols2-5-dev,
 		qttools5-dev,
 		qttools5-dev-tools,
