--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,9 @@ foreach(_ts_file ${TS_FILES})
     execute_process(COMMAND lrelease ${_ts_file})
 endforeach()
 
+install(FILES ${QM_FILES} DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/translations)
 install(TARGETS lingmo-updator RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
-install(FILES ${QM_FILES} DESTINATION /usr/share/lingmo-updator/translations)
+# install(FILES ${QM_FILES} DESTINATION /usr/share/lingmo-updator/translations)
 
 install(FILES
     lingmo-updator.desktop
