--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: 1.9.9-20
-        release_name: Release 1.9.9-20 Packages
+        tag_name: 3.0.0-rc1
+        release_name: Release 3.0.0-rc1 Packages
         draft: false
         prerelease: false
     - name: Upload Release Asset
