--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
   debian:
     name: Debian
     runs-on: ubuntu-latest
-    container: docker.io/library/debian:bookworm
+    container: docker.io/library/debian:testing
     steps:
     - name: Checkout Source
       uses: actions/checkout@v2
@@ -50,6 +50,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /__w/lingmo-updator/*.deb
-        asset_name: *.deb
+        asset_path: /__w/lingmo-updator/lingmo-updator_3.0.0-rc1_amd64.deb
+        asset_name: lingmo-updator_3.0.0-rc1_amd64.deb
         asset_content_type: application/deb
